--- a/src/app/download-approval/download-approval.component.html
+++ b/src/app/download-approval/download-approval.component.html
@@ -154,13 +154,13 @@
       <div class="row mb-2">
         <div class="col form-inline">
           <label class="table-primary p-2">公告類別</label>
-          <div class="pl-2 ml-auto mr-5">
+          <div class="pl-2">
             <span>一般公告</span>
           </div>
         </div>
         <div class="col form-inline">
           <label class="table-primary p-2">公告單位</label>
-          <div class="pl-2 ml-auto mr-5">
+          <div class="pl-2">
             <span>營運管理處</span>
           </div>
         </div>
@@ -169,13 +169,13 @@
       <div class="row mb-2">
         <div class="col form-inline">
           <label class="table-primary p-2">檢視單位</label>
-          <div class="pl-2 ml-auto mr-5">
+          <div class="pl-2">
             <span>全員工</span>
           </div>
         </div>
         <div class="col form-inline">
           <label class="table-primary p-2">檢視人員</label>
-          <div class="pl-2 ml-auto mr-5">
+          <div class="pl-2">
             <span></span>
           </div>
         </div>
@@ -184,13 +184,13 @@
       <div class="row mb-2">
         <div class="col form-inline">
           <label class="table-primary p-2">發佈日期</label>
-          <div class="pl-2 ml-auto mr-5">
+          <div class="pl-2">
             <span>2020/12/31</span>
           </div>
         </div>
         <div class="col form-inline">
           <label class="table-primary p-2">發佈者</label>
-          <div class="pl-2 ml-auto mr-5">
+          <div class="pl-2">
             <span>大朋友(child)</span>
           </div>
         </div>
@@ -199,13 +199,13 @@
       <div class="row mb-2">
         <div class="col form-inline">
           <label class="table-primary p-2">上架日期</label>
-          <div class="pl-2 ml-auto mr-5">
+          <div class="pl-2">
             <span>2021/3/5</span>
           </div>
         </div>
         <div class="col form-inline">
           <label class="table-primary p-2">下架日期</label>
-          <div class="pl-2 ml-auto mr-5">
+          <div class="pl-2">
             <span></span>
           </div>
         </div>
@@ -214,13 +214,13 @@
       <div class="row mb-2">
         <div class="col form-inline">
           <label class="table-primary p-2">下載審核</label>
-          <div class="pl-2 ml-auto mr-5">
+          <div class="pl-2">
             <input type="checkbox" name="" id="" disabled checked />
           </div>
         </div>
         <div class="col form-inline">
           <label class="table-primary p-2">下載審核者</label>
-          <div class="pl-2 ml-auto mr-5">
+          <div class="pl-2">
             <span>公告單位主管(admin)</span>
           </div>
         </div>
@@ -229,7 +229,7 @@
       <div class="row mb-2">
         <div class="col form-inline">
           <label class="table-primary p-2">浮水印</label>
-          <div class="pl-2 ml-auto mr-5">
+          <div class="pl-2">
             <input type="checkbox" name="" id="" disabled checked />
           </div>
         </div>
@@ -239,7 +239,7 @@
       <div class="row mb-2">
         <div class="col form-inline">
           <label class="table-primary p-2">公告名稱</label>
-          <div class="pl-2 ml-auto mr-5">
+          <div class="pl-2">
             <span>稽核公告</span>
           </div>
         </div>
@@ -249,7 +249,7 @@
       <div class="row mb-2">
         <div class="col form-inline">
           <label class="table-primary p-2">附件名稱</label>
-          <div class="pl-2 ml-auto mr-5">
+          <div class="pl-2">
             <span>稽核表</span>
           </div>
         </div>
@@ -258,7 +258,7 @@
       <div class="row mb-2">
         <div class="col form-inline">
           <label></label>
-          <div class="pl-2 ml-auto mr-5">
+          <div class="pl-2">
             <span>使用說明</span>
           </div>
         </div>
@@ -267,7 +267,7 @@
       <div class="row mb-2">
         <div class="col form-inline">
           <label></label>
-          <div class="pl-2 ml-auto mr-5">
+          <div class="pl-2">
             <span>範例</span>
           </div>
         </div>
@@ -277,7 +277,7 @@
       <div class="row mb-2">
         <div class="col form-inline">
           <label class="table-primary p-2">下載申請者</label>
-          <div class="pl-2 ml-auto mr-5">
+          <div class="pl-2">
             <span>大朋友(Kid)</span>
           </div>
         </div>
@@ -287,7 +287,7 @@
       <div class="row mb-2">
         <div class="col form-inline">
           <label class="table-primary p-2">下載原因</label>
-          <div class="pl-2 ml-auto mr-5">
+          <div class="pl-2">
             <span>需要使用</span>
           </div>
         </div>
