--- a/src/app/download-approval/download-approval.component.html
+++ b/src/app/download-approval/download-approval.component.html
@@ -139,7 +139,7 @@
 <!-- bootstrap modal -->
 <ng-template #template>
   <div class="modal-header">
-    <h4 class="modal-title pull-left">申請</h4>
+    <h4 class="modal-title pull-left">審核</h4>
     <button
       type="button"
       class="close pull-right"
@@ -253,26 +253,37 @@
             <span>稽核表</span>
           </div>
         </div>
-        <div class="col form-inline">Excel、PDF、Word</div>
+        <div class="col form-inline icon-img-ctn">
+          <img
+            src="/assets/icons/icons8-microsoft-word-48.png"
+            alt=""
+            srcset=""
+          />
+          <img
+            src="/assets/icons/icons8-microsoft-excel-48.png"
+            alt=""
+            srcset=""
+          />
+        </div>
       </div>
-      <div class="row mb-2">
+      <!-- <div class="row mb-2">
         <div class="col form-inline">
           <label></label>
-          <div class="pl-2">
+          <div class="ml-5 pl-4">
             <span>使用說明</span>
           </div>
         </div>
         <div class="col form-inline"></div>
-      </div>
-      <div class="row mb-2">
+      </div> -->
+      <!-- <div class="row mb-2">
         <div class="col form-inline">
           <label></label>
-          <div class="pl-2">
+          <div class="ml-5 pl-4">
             <span>範例</span>
           </div>
         </div>
         <div class="col form-inline"></div>
-      </div>
+      </div> -->
       <hr class="mt-1 mb-1" />
       <div class="row mb-2">
         <div class="col form-inline">
