--- a/src/app/table-info/table-info.component.html
+++ b/src/app/table-info/table-info.component.html
@@ -82,7 +82,14 @@
             <td>
               <div>LOGO 使用說明 範例</div>
             </td>
-            <td>檔案</td>
+            <td>
+              <img src="/assets/icons/icons8-pdf-16" alt="" srcset="">
+              <img src="/assets/icons/icons8-microsoft-word-48.png" alt="" srcset="">
+              <img src="/assets/icons/icons8-microsoft-excel-48.png" alt="" srcset="">
+              <!-- <img src="/assets/icons/icons8-png-16.png" alt="" srcset="">
+              <img src="/assets/icons/icons8-jpg-16.png" alt="" srcset="">
+              <img src="/assets/icons/icons8-ppt-16.png" alt="" srcset=""> -->
+            </td>
             <td>1.5MB</td>
             <td>2021/3/3</td>
           </tr>
