--- a/src/app/download-application/download-application.component.html
+++ b/src/app/download-application/download-application.component.html
@@ -100,6 +100,7 @@
         <div class="col form-inline"></div>
       </div>
       <div class="row mb-2">
+        <div class="col form-inline"></div>
         <div class="col form-inline">
           <label></label>
           <div class="pl-2 ml-auto">
@@ -109,6 +110,7 @@
         <div class="col form-inline"></div>
       </div>
       <div class="row mb-2">
+        <div class="col form-inline"></div>
         <div class="col form-inline">
           <label></label>
           <div class="pl-2 ml-auto">
@@ -138,10 +140,18 @@
     </section>
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-primary ml-auto" (click)="modalRef.hide()">
+    <button
+      type="button"
+      class="btn btn-primary ml-auto"
+      (click)="modalRef.hide()"
+    >
       申請
     </button>
-    <button type="button" class="btn btn-secondary mr-auto" (click)="modalRef.hide()">
+    <button
+      type="button"
+      class="btn btn-secondary mr-auto"
+      (click)="modalRef.hide()"
+    >
       取消
     </button>
   </div>
