調整按鈕文字

--- a/src/app/download-approval/download-approval.component.html
+++ b/src/app/download-approval/download-approval.component.html
@@ -331,7 +331,14 @@
       class="btn btn-primary ml-auto"
       (click)="modalRef.hide()"
     >
-      申請
+      核准
+    </button>
+    <button
+      type="button"
+      class="btn btn-danger"
+      (click)="modalRef.hide()"
+    >
+      退件
     </button>
     <button
       type="button"
