--- a/src/app/table-info/table-info.component.html
+++ b/src/app/table-info/table-info.component.html
@@ -80,15 +80,27 @@
             <td>一般公告</td>
             <td>公司LOGO</td>
             <td>
-              <div>LOGO 使用說明 範例</div>
+              <div class="td-group">
+                <span>LOGO</span>
+                <span>使用說明</span>
+                <span>範例</span>
+              </div>
             </td>
             <td>
-              <img src="/assets/icons/icons8-pdf-48.png" alt="" srcset="">
-              <img src="/assets/icons/icons8-microsoft-word-48.png" alt="" srcset="">
-              <img src="/assets/icons/icons8-microsoft-excel-48.png" alt="" srcset="">
-              <img src="/assets/icons/icons8-png-48.png" alt="" srcset="">
-              <img src="/assets/icons/icons8-jpg-48.png" alt="" srcset="">
-              <img src="/assets/icons/icons8-ppt-48.png" alt="" srcset="">
+              <img src="/assets/icons/icons8-pdf-48.png" alt="" srcset="" />
+              <img
+                src="/assets/icons/icons8-microsoft-word-48.png"
+                alt=""
+                srcset=""
+              />
+              <img
+                src="/assets/icons/icons8-microsoft-excel-48.png"
+                alt=""
+                srcset=""
+              />
+              <img src="/assets/icons/icons8-png-48.png" alt="" srcset="" />
+              <img src="/assets/icons/icons8-jpg-48.png" alt="" srcset="" />
+              <img src="/assets/icons/icons8-ppt-48.png" alt="" srcset="" />
             </td>
             <td>1.5MB</td>
             <td>2021/3/3</td>
@@ -98,7 +110,10 @@
             <td>單位公告</td>
             <td>稽核單</td>
             <td>
-              <div>稽核單 使用說明</div>
+              <div class="td-group">
+                <span>稽核單</span>
+                <span>使用說明</span>
+              </div>
             </td>
             <td>
               <button class="btn btn-secondary" (click)="openModal(template)">
@@ -185,7 +200,7 @@
         <div class="col form-inline">
           <label class="table-primary">下載審核者</label>
           <div class="pl-2">
-            <span>公告單位主管(admin)</span>
+            <span>公告單位主管(Dep_Admin)</span>
           </div>
         </div>
       </div>
