--- a/src/app/table-info/table-info.component.scss
+++ b/src/app/table-info/table-info.component.scss
@@ -14,6 +14,11 @@
       td {
         word-break: keep-all;
         padding: 0.4em;
+        .td-group {
+          span {
+            display: block;
+          }
+        }
       }
     }
   }
