--- a/src/app/download-approval/download-approval.component.html
+++ b/src/app/download-approval/download-approval.component.html
@@ -158,6 +158,11 @@
         </tbody>
       </table>
     </div>
+    <div class="row mb-2">
+        <div class="col">
+          <button type="button" class="btn btn-primary">核准</button>
+        </div>
+      </div>
   </section>
 </main>
 
