--- a/src/app/table-info/table-info.component.html
+++ b/src/app/table-info/table-info.component.html
@@ -227,7 +227,7 @@
       <hr class="mt-1 mb-1" />
       <div class="row mb-2">
         <div class="col form-inline">
-          <label class="table-primary">檔案名稱</label>
+          <label class="table-primary">附件名稱</label>
           <div class="pl-2">
             <span>稽核表</span>
           </div>
@@ -259,7 +259,7 @@
         <div class="col form-inline">
           <label>申請人</label>
           <div class="pl-2 offset-md-1">
-            <input type="text" class="form-control" />
+            <input type="text" class="form-control" disabled value="小朋友 (Kid)" />
           </div>
         </div>
       </div>
