--- a/src/app/download-approval/download-approval.component.scss
+++ b/src/app/download-approval/download-approval.component.scss
@@ -23,3 +23,14 @@
     }
   }
 }
+
+.modal-body {
+  .row {
+    .col {
+      label {
+        width: 100px;
+        height: 2em;
+      }
+    }
+  }
+}
