--- a/src/app/table-info/table-info.component.html
+++ b/src/app/table-info/table-info.component.html
@@ -1,6 +1,6 @@
 <main class="container">
   <h3>下載專區</h3>
-  <section class="my-2">
+  <section class="my-2 querySection">
     <div class="row mb-2">
       <div class="col form-inline">
         <label class="">公告類別</label>
@@ -26,7 +26,7 @@
       <div class="col form-inline">
         <label class="">發佈日期</label>
         <div class="pl-2 form-inline">
-          <div class="">
+          <div class="datepicker-ctn">
             <input
               type="text"
               placeholder="起日"
@@ -34,9 +34,10 @@
               bsDatepicker
               [bsConfig]="{ adaptivePosition: true }"
             />
+            <img src="/assets/icons/day@2x.png" class="day-icon" alt="" srcset="">
           </div>
           <span> ~ </span>
-          <div class="">
+          <div class="datepicker-ctn">
             <input
               type="text"
               placeholder="訖日"
@@ -44,6 +45,7 @@
               bsDatepicker
               [bsConfig]="{ adaptivePosition: true }"
             />
+            <img src="/assets/icons/day@2x.png" class="day-icon" alt="" srcset="">
           </div>
         </div>
       </div>
