--- a/src/app/download-approval/download-approval.component.html
+++ b/src/app/download-approval/download-approval.component.html
@@ -141,9 +141,19 @@
           </tr>
           <tr>
             <th scope="row"><input type="checkbox" name="" id="" /></th>
-            <td>下鮺審核</td>
-            <td>單位公告、稽核單</td>
-            <td>稽核單、使用說明</td>
+            <td>下載審核</td>
+            <td>
+              <div class="td-group">
+                <span>單位公告</span>
+                <span>稽核單</span>
+              </div>
+            </td>
+            <td>
+              <div class="td-group">
+                <span>稽核單</span>
+                <span>使用說明</span>
+              </div>
+            </td>
             <td><a href="">中文名字</a></td>
             <td>
               <div class="td-group">
