--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <nav>
-  <a routerLink="/download">download</a>
-  <a routerLink="/approval">approval</a>
+  <a routerLink="/download">download</a>.
+  <a routerLink="/approval">approval</a>.
+  <a routerLink="/maintain">approval</a>
 </nav>
 <router-outlet></router-outlet>
