--- a/src/app/download-approval/download-approval.component.scss
+++ b/src/app/download-approval/download-approval.component.scss
@@ -1,6 +1,7 @@
 .querySection {
     .datepicker-ctn {
       position: relative;
+      width: 10em;
       .day-icon {
         position: absolute;
         right: 0;
