--- a/src/app/maintain/maintain.component.scss
+++ b/src/app/maintain/maintain.component.scss
@@ -20,9 +20,10 @@
       th {
         vertical-align: middle;
         padding: 0.4em;
-
-        span {
-          display: block;
+        .td-group {
+          span {
+            display: block;
+          }
         }
       }
     }
