--- a/src/app/maintain/maintain.component.html
+++ b/src/app/maintain/maintain.component.html
@@ -90,13 +90,34 @@
       <table class="table table-bordered">
         <thead>
           <tr class="table-primary">
-            <th scope="col"><span>公告類別</span><span>公告名稱</span></th>
+            <th scope="col">
+              <div class="td-group">
+                <span>公告類別</span><span>公告名稱</span>
+              </div>
+            </th>
             <th scope="col"><span>公告單位</span></th>
             <th scope="col"><span>公告狀態</span></th>
             <th scope="col"><span>附件名稱</span></th>
-            <th scope="col"><span>檢視單位</span><span>檢視人員</span></th>
-            <th scope="col"><span>上架日期</span><span>下架日期</span></th>
-            <th scope="col"><span>下載審核</span><span>下載審核者</span></th>
+            <th scope="col">
+              <div class="td-group">
+                <span>檢視單位</span><span>檢視人員</span>
+              </div>
+            </th>
+            <th scope="col">
+              <div class="td-group">
+                <span>發佈日期</span><span>發佈者</span>
+              </div>
+            </th>
+            <th scope="col">
+              <div class="td-group">
+                <span>上架日期</span><span>下架日期</span>
+              </div>
+            </th>
+            <th scope="col">
+              <div class="td-group">
+                <span>下載審核</span><span>下載審核者</span>
+              </div>
+            </th>
             <th scope="col"><span>浮水印</span></th>
             <th scope="col"><span>廢止</span></th>
             <th scope="col"><span>操作</span></th>
@@ -127,7 +148,8 @@
               </div>
             </td>
             <td>2021/3/3</td>
-            <td>V</td>
+            <td></td>
+            <td></td>
             <td>V</td>
             <td></td>
           </tr>
@@ -155,6 +177,7 @@
             </td>
             <td>2021/3/20</td>
             <td>大朋友(Kid)</td>
+            <td>V</td>
             <td></td>
             <td></td>
           </tr>
