--- a/src/app/maintain/maintain.component.scss
+++ b/src/app/maintain/maintain.component.scss
@@ -28,7 +28,7 @@
       }
     }
     tbody {
-      td {
+      td,th {
         word-break: keep-all;
         padding: 0.4em;
         .td-group {
