--- a/src/app/maintain/maintain.component.html
+++ b/src/app/maintain/maintain.component.html
@@ -1,5 +1,8 @@
 <main class="container">
-  <h3>下載專區維護設定</h3>
+  <section class="row my-2">
+    <h3>下載專區維護設定</h3>
+    <button class="btn btn-primary ml-auto">新增</button>
+  </section>
   <section class="my-2 querySection">
     <div class="row mb-2">
       <div class="col form-inline">
