add icon & styling

--- a/src/app/maintain/maintain.component.html
+++ b/src/app/maintain/maintain.component.html
@@ -154,7 +154,10 @@
             <td></td>
             <td></td>
             <td>V</td>
-            <td></td>
+            <td>
+                <img src="/assets/icons/button_preview@2x.png" class="icon-button" alt="" srcset="">
+                <!-- <img src="/assets/icons/clip.png" alt="" srcset=""> -->
+            </td>
           </tr>
           <tr>
             <th scope="row">
