add icon & styling

--- a/src/app/maintain/maintain.component.html
+++ b/src/app/maintain/maintain.component.html
@@ -156,7 +156,7 @@
             <td>V</td>
             <td>
                 <img src="/assets/icons/button_preview@2x.png" class="icon-button" alt="" srcset="">
-                <!-- <img src="/assets/icons/clip.png" alt="" srcset=""> -->
+                <img src="/assets/icons/icons8-ball-point-pen-48.png" class="icon-button" alt="" srcset="">
             </td>
           </tr>
           <tr>
