--- a/src/app/maintain/maintain.component.scss
+++ b/src/app/maintain/maintain.component.scss
@@ -17,7 +17,10 @@
 .tableSection {
   .table {
     .icon-button {
-      width: 32px;
+      width: 40px;
+      height: 40px;
+      padding: 0.2em;
+      margin: .2em;
       background-color: #97caf1;
       display: inline-block;
       cursor: pointer;
