--- a/src/app/download-approval/download-approval.component.html
+++ b/src/app/download-approval/download-approval.component.html
@@ -319,24 +319,24 @@
           />
         </div>
       </div>
-      <!-- <div class="row mb-2">
+      <div class="row mb-2">
         <div class="col form-inline">
           <label></label>
-          <div class="ml-5 pl-4">
+          <div class="pl-2">
             <span>使用說明</span>
           </div>
         </div>
         <div class="col form-inline"></div>
-      </div> -->
-      <!-- <div class="row mb-2">
+      </div>
+      <div class="row mb-2">
         <div class="col form-inline">
           <label></label>
-          <div class="ml-5 pl-4">
+          <div class="pl-2">
             <span>範例</span>
           </div>
         </div>
         <div class="col form-inline"></div>
-      </div> -->
+      </div>
       <hr class="mt-1 mb-1" />
       <div class="row mb-2">
         <div class="col form-inline">
